# asm_matrix_benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md  results.json
benchmark/: bench_cross.py  bench_python.py  bench_results.json
example/: matrix_double.c  matrix_double.cpp  matrix_double.java  matrix_double.py  matrix_float.c  matrix_float.cpp  matrix_float.java  matrix_int.c  matrix_int.cpp  matrix_int.java  matrix_int.py
include/: add_matrix.h  base_fraction.h  base_matrix.h  cat_matrix.h  compare_matrix.h  determinant_matrix.h  extract_matrix.h  find_matrix.h  free_matrix.h  inv_matrix.h  leading_minors.h  lu_matrix.h  matrix.h  matrix_cpp.h  matrix_double_cpp.h  matrix_float_cpp.h  matrix_int_cpp.h  mul_matrix.h  operator_fraction.h  print_matrix.h  random_matrix.h  rank_trace_matrix.h  replace_matrix.h  scale_matrix.h  special_matrix.h  sub_matrix.h  transpose_matrix.h
scripts/: build.bat  build.sh  run.bat  run.sh  run_java.bat  run_java.sh
src/: __init__.py
src/C/: add_matrix.c  cat_matrix.c  compare_matrix.c  determinant_matrix.c  extract_matrix.c  find_matrix.c  free_matrix.c  inv_matrix.c  leading_minors.c  lu_matrix.c  mul_matrix.c  operator_fraction.c  print_matrix.c  random_matrix.c  rank_trace_matrix.c  replace_matrix.c  scale_matrix.c  special_matrix.c  sub_matrix.c  transpose_matrix.c
src/C++/: add_matrix.cpp  cat_matrix.cpp  compare_matrix.cpp  constructor_matrix.cpp  destructor_matrix.cpp  extract_matrix.cpp  find_matrix.cpp  leading_minors.cpp  mul_matrix.cpp  print_matrix.cpp  rank_trace_matrix.cpp  replace_matrix.cpp  scale_matrix.cpp  special_matrix.cpp  sub_matrix.cpp  transpose_matrix.cpp
src/C++/double/: add_matrix.cpp  cat_matrix.cpp  compare_matrix.cpp  constructor_matrix.cpp  destructor_matrix.cpp  extract_matrix.cpp  find_matrix.cpp  inv_matrix.cpp  leading_minors.cpp  lu_matrix.cpp  mul_matrix.cpp  print_matrix.cpp  rank_trace_matrix.cpp  replace_matrix.cpp  scale_matrix.cpp  special_matrix.cpp  sub_matrix.cpp  transpose_matrix.cpp
src/C++/float/: add_matrix.cpp  cat_matrix.cpp  compare_matrix.cpp  constructor_matrix.cpp  destructor_matrix.cpp  extract_matrix.cpp  find_matrix.cpp  inv_matrix.cpp  leading_minors.cpp  lu_matrix.cpp  mul_matrix.cpp  print_matrix.cpp  rank_trace_matrix.cpp  replace_matrix.cpp  scale_matrix.cpp  special_matrix.cpp  sub_matrix.cpp  transpose_matrix.cpp
src/C++/int/: add_matrix.cpp  cat_matrix.cpp  compare_matrix.cpp  constructor_fraction.cpp  constructor_matrix.cpp  destructor_fraction.cpp  destructor_matrix.cpp  determinant.cpp  extract_matrix.cpp  find_matrix.cpp  inv_matrix.cpp  leading_minors.cpp  lu_matrix.cpp  mul_matrix.cpp  operator_fraction.cpp  print_matrix.cpp  rank_trace_matrix.cpp  replace_matrix.cpp  scale_matrix.cpp  special_matrix.cpp  sub_matrix.cpp  transpose_matrix.cpp
src/Java/: Fraction.java  LUResult.java  MatrixDouble.java  MatrixFloat.java  MatrixInt.java
src/JavaScript/: add_matrix.js  base_matrix.js  cat_matrix.js  common.js  compare_matrix.js  determinant_matrix.js  extract_matrix.js  find_matrix.js  index.js  inv_matrix.js  leading_minors.js  lu_matrix.js  mul_matrix.js  print_matrix.js  random_matrix.js  rank_trace_matrix.js  replace_matrix.js  scale_matrix.js  special_matrix.js  sub_matrix.js  transpose_matrix.js
src/Python/: __init__.py  base_matrix.py  concat_matrix.py  determinant_matrix.py  extract_matrix.py  find_matrix.py  inv_matrix.py  leading_minors.py  lu_decomposition.py  matrix.py  random_matrix.py  rank_matrix.py  replace_matrix.py  special_matrix.py  trace_matrix.py  transpose_matrix.py
src/assembly/linux/: add_matrix_double.asm  add_matrix_float.asm  add_matrix_int.asm  cat_matrix_double.asm  cat_matrix_float.asm  cat_matrix_int.asm  compare_matrix_double.asm  compare_matrix_float.asm  compare_matrix_int.asm  extract_col_matrix_double.asm  extract_col_matrix_float.asm  extract_col_matrix_int.asm  extract_diag_matrix_double.asm  extract_diag_matrix_float.asm  extract_diag_matrix_int.asm  extract_row_matrix_double.asm  extract_row_matrix_float.asm  extract_row_matrix_int.asm  find_matrix_double.asm  find_matrix_float.asm  find_matrix_int.asm  inv_matrix_double.asm  inv_matrix_float.asm  inv_matrix_int.asm  leading_minors_double.asm  leading_minors_float.asm  leading_minors_int.asm  lu_matrix_double.asm  lu_matrix_float.asm  lu_matrix_int.asm  mul_matrix_double.asm  mul_matrix_float.asm  mul_matrix_int.asm  print_matrix_double.asm  print_matrix_float.asm  print_matrix_int.asm  random_matrix_double.asm  random_matrix_float.asm  random_matrix_int.asm  rank_matrix_double.asm  (+23 more)
src/assembly/linux/double/: add_matrix_double.asm  cat_matrix_double.asm  compare_matrix_double.asm  extract_col_matrix_double.asm  extract_diag_matrix_double.asm  extract_row_matrix_double.asm  find_matrix_double.asm  free_leading_minors_double.asm  free_matrix_double.asm  inv_matrix_double.asm  leading_minors_double.asm  lu_matrix_double.asm  mul_matrix_double.asm  print_matrix_double.asm  random_matrix_double.asm  (+8 more)
src/assembly/windows/: add_matrix_double.asm  add_matrix_float.asm  add_matrix_int.asm  cat_matrix_double.asm  cat_matrix_float.asm  compare_matrix_double.asm  compare_matrix_float.asm  compare_matrix_int.asm  extract_col_matrix_double.asm  extract_col_matrix_float.asm  extract_col_matrix_int.asm  extract_diag_matrix_double.asm  extract_diag_matrix_float.asm  extract_diag_matrix_int.asm  extract_row_matrix_double.asm  extract_row_matrix_float.asm  extract_row_matrix_int.asm  find_matrix_double.asm  find_matrix_float.asm  find_matrix_int.asm  inv_matrix_double.asm  inv_matrix_float.asm  inv_matrix_int.asm  leading_minors_double.asm  leading_minors_float.asm  leading_minors_int.asm  lu_matrix_double.asm  lu_matrix_float.asm  lu_matrix_int.asm  mul_matrix_double.asm  mul_matrix_float.asm  mul_matrix_int.asm  print_matrix_double.asm  print_matrix_float.asm  print_matrix_int.asm  random_matrix_double.asm  random_matrix_float.asm  random_matrix_int.asm  rank_matrix_double.asm  rank_matrix_float.asm  (+21 more)
src/benchmark/: bench_python.py
src/windows/: add_matrix_int.asm
(+123 files in other folders)
